--- a/dev/src/ejs/_include/nav.ejs
+++ b/dev/src/ejs/_include/nav.ejs
@@ -1,7 +1,7 @@
 <ul>
-	<li><a href="#about">ABOUT</a></li>
-	<li><a href="#service">SERVICE</a></li>
-	<li><a href="#company">COMPANY</a></li>
-	<li><a href="#reqruit">RECRUIT</a></li>
-	<li><a href="#contact">CONTACT</a></li>
+	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#about">ABOUT</a></li>
+	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#service">SERVICE</a></li>
+	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#company">COMPANY</a></li>
+	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#reqruit">RECRUIT</a></li>
+	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#contact">CONTACT</a></li>
 </ul>
