--- a/dev/src/ejs/_include/footer.ejs
+++ b/dev/src/ejs/_include/footer.ejs
@@ -11,8 +11,8 @@
             <div class="siteFooter__nav__menus">
                 <nav>
                     <ul>
-                        <li><a href="">プライバシーポリシー</a></li>
-                        <li><a href="">利用規約</a></li>
+                        <li><a href="privacy.html">プライバシーポリシー</a></li>
+                        <li><a href="agreement.html">利用規約</a></li>
                     </ul>
                 </nav>
             </div>
