--- a/dev/src/ejs/_include/head.ejs
+++ b/dev/src/ejs/_include/head.ejs
@@ -17,7 +17,7 @@
   <meta property="fb:app_id" content="2184201708535530">
   <meta name="twitter:card" content="summary">
   <!-- <meta name="twitter:site" content="@flickr" > -->
-  <% if( $active == 'contactDone' ){ %><meta name="robots" content="noindex,nofollow"><% } %>
+  <% if( $active == 'thank' ){ %><meta name="robots" content="noindex,nofollow"><% } %>
   <meta name="twitter:title" content="<%- $meta.twitter.title %>">
   <meta name="twitter:description" content="<%- $meta.twitter.description %>">
   <link rel="shortcut icon" href="assets/img/favicon.ico"> 
