--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -1469,6 +1469,7 @@ main .wrap{
         .button{
 
             @include mq(tab) {
+                display: block;
                 margin-right: auto;
                 margin-left: auto;
 
