--- a/dev/src/ejs/_include/nav.ejs
+++ b/dev/src/ejs/_include/nav.ejs
@@ -2,6 +2,6 @@
 	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#about">ABOUT</a></li>
 	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#service">SERVICE</a></li>
 	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#company">COMPANY</a></li>
-	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#reqruit">RECRUIT</a></li>
+	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#recruit">RECRUIT</a></li>
 	<li><a href="<% if( $active !== "top" ){ %>/<%}%>#contact">CONTACT</a></li>
 </ul>
