--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -1063,6 +1063,10 @@ main .wrap{
         &__imgs{
             display: flex;
 
+            figure{
+                width: 100%;
+            }
+
             @include mq( sp ){
                 margin-top: -40px;
                 flex-direction: column;
