--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -815,7 +815,7 @@
 												<p>
 													東京都公安委員会 第306601706935号 株式会社　水野<br>
 													特別国際種事業者番号：S-5-27-00258　酒販免許：北税務署 北法第299号<br>
-													http://six-ginzaten.otakaraya.net/
+													<a href="http://six-ginzaten.otakaraya.net/" target="_blank">http://six-ginzaten.otakaraya.net/</a>
 												</p>
 											</div>
 										</li>
@@ -849,7 +849,7 @@
 												<p>
 													東京都公安委員会 第306601706935号　株式会社水野 <br>
 													特別国際種事業者番号：S-3-13-31346 <br>
-													http://ueno-okachimachi.otakaraya.net/
+													<a href="http://ueno-okachimachi.otakaraya.net/" target="_blank">http://ueno-okachimachi.otakaraya.net/</a>
 												</p>
 											</div>
 										</li>
@@ -891,7 +891,7 @@
 												<p>
 													大阪府公安委員会　第621012100382号　株式会社 水野 <br>
 													特別国際種事業者番号：S-5-27-00258　酒販免許：北税務署 北法第299号 <br>
-													http://umeda.otakaraya.net/
+													<a href="http://umeda.otakaraya.net/" target="_blank">http://umeda.otakaraya.net/</a>
 												</p>
 											</div>
 										</li>
@@ -923,7 +923,7 @@
 												<p>
 													大阪府公安委員会　第621012100382号　株式会社 水野 <br>
 													特別国際種事業者番号：S-5-27-00258　酒販免許：北税務署 北法第299号 <br>
-													http://shinsaibashi.otakaraya.net/
+													<a href="http://shinsaibashi.otakaraya.net/" target="_blank">http://shinsaibashi.otakaraya.net/</a>
 												</p>
 											</div>
 										</li>
