--- a/dev/src/scss/_style-top.scss
+++ b/dev/src/scss/_style-top.scss
@@ -282,6 +282,10 @@ main .wrap{
         bottom: 10vw;
     	text-align: center;
 
+        @include mq( tab,min ){
+            display: none;
+        }
+
         @include mq( sp ){
             bottom: 35vw;
         }
@@ -1275,6 +1279,13 @@ main .wrap{
                     $icon-margin-right: 10px,
                     $font-size: 1.5em
                 )
+            }
+
+
+            a{
+                @include mouseOver(){
+                    text-decoration: underline;
+                }
             }
         }
         
