--- a/dev/src/ejs/_include/head.ejs
+++ b/dev/src/ejs/_include/head.ejs
@@ -20,7 +20,7 @@
   <% if( $active == 'thank' ){ %><meta name="robots" content="noindex,nofollow"><% } %>
   <meta name="twitter:title" content="<%- $meta.twitter.title %>">
   <meta name="twitter:description" content="<%- $meta.twitter.description %>">
-  <link rel="shortcut icon" href="assets/img/favicon.ico"> 
-  <link rel="apple-touch-icon" href="assets/img/favicon-apple-touch-icon-144x144.png" sizes="144x144">
-  <link rel="icon" href="assets/img/favicon-apple-touch-icon-144x144.png" sizes="144x144">
+  <link rel="shortcut icon" href="assets/img/favicon.png"> 
+  <link rel="apple-touch-icon" href="assets/img/favicon.png" sizes="144x144">
+  <link rel="icon" href="assets/img/favicon.png" sizes="144x144">
 </head>
