--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -173,7 +173,7 @@
 											2008年9月
 										</div>
 										<div class="history__list__event__text">
-											全国チェーン店　おたからや　FC契約を結び関西一号店となる梅田店を開業<br>
+											全国チェーン店　おたからや　FC契約を結びおたからやFC一号店となる梅田店を開業<br>
 											ヤフーオークション出店
 										</div>
 									</div>
@@ -189,11 +189,11 @@
 								<li class="history__list__event">
 									<div class="history__list__event__then">
 										<div class="history__list__event__date">
-											2009年9月
+											2009年7月
 										</div>
 										<div class="history__list__event__text">
 											株式会社水野　法人設立<br>
-											楽天 出店
+											楽天市場 出店
 										</div>
 									</div>
 								</li>
@@ -203,7 +203,7 @@
 											2011年
 										</div>
 										<div class="history__list__event__text">
-											アマゾンジャパン 出店
+											Amazon 出店
 										</div>
 									</div>
 								</li>
@@ -213,7 +213,7 @@
 											2012年
 										</div>
 										<div class="history__list__event__text">
-											eBay 出店
+											アメリカオークションサイトeBay 出店
 										</div>
 									</div>
 								</li>
@@ -243,7 +243,7 @@
 											2014年2月
 										</div>
 										<div class="history__list__event__text">
-											実店舗［MIDUNOYA］オープン
+											通販向け実店舗［MIDUNOYA］オープン
 										</div>
 									</div>
 									<div class="history__list__event__images">
@@ -261,7 +261,7 @@
 											2015年1月
 										</div>
 										<div class="history__list__event__text">
-											心斎橋店 出店
+											おたからや心斎橋店 出店
 										</div>
 									</div>
 								</li>
@@ -271,7 +271,7 @@
 											2015年7月
 										</div>
 										<div class="history__list__event__text">
-											リーボンズ、タオバオ 出店
+											Reebonz、タオバオへの出店
 										</div>
 									</div>
 								</li>
@@ -281,7 +281,7 @@
 											2016年6月
 										</div>
 										<div class="history__list__event__text">
-											4億5千5百万円達成
+											年商4億5千5百万円達成
 										</div>
 									</div>
 								</li>
@@ -291,7 +291,7 @@
 											2017年4月
 										</div>
 										<div class="history__list__event__text">
-											ヤフーショッピング出店
+											Yahooショッピング出店
 										</div>
 									</div>
 								</li>
@@ -750,8 +750,8 @@
 										<a href="https://www.google.co.jp/maps/place/%E3%80%92104-0061+%E6%9D%B1%E4%BA%AC%E9%83%BD%E4%B8%AD%E5%A4%AE%E5%8C%BA%E9%8A%80%E5%BA%A7%EF%BC%96%E4%B8%81%E7%9B%AE%EF%BC%94+%E6%9B%BD%E6%A0%B9%E3%83%93%E3%83%AB%EF%BC%91%E9%9A%8E/@35.6710283,139.7591359,17z/data=!3m1!4b1!4m5!3m4!1s0x60188bef38888fad:0xe438e278e7bbadff!8m2!3d35.6710283!4d139.7613246" target="_blank">Googe Mapで見る</a>
 									</div>
 								</div>
-								<div class="officeMap__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1063.44459708485!2d135.50366580884958!3d34.70236311891975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e5d07dc2ef50aed!2z44OZ44O844K544Kq44Oz44OI44OD44OXIOWkp-mYquaiheeUsOW6l--9nEJBU1MgT04gVE9Q!5e0!3m2!1sja!2sjp!4v1539230029097"
-								width="560" height="390" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+								<div class="officeMap__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.2425895704528!2d139.7591359152584!3d35.67102828019667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bef38888fad%3A0xe438e278e7bbadff!2z44CSMTA0LTAwNjEg5p2x5Lqs6YO95Lit5aSu5Yy66YqA5bqn77yW5LiB55uu77yUIOabveagueODk-ODq--8kemajg!5e0!3m2!1sja!2sjp!4v1541388557679"
+								 width="560" height="390" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 							</section>
 							<section class="officeMap">
 								<div class="officeMap__text">
@@ -769,8 +769,8 @@
 										<a href="https://www.google.co.jp/maps/place/%E4%B8%89%E5%85%B1%E6%A2%85%E7%94%B0%E3%83%93%E3%83%AB/@34.7027397,135.5022667,17z/data=!3m1!4b1!4m5!3m4!1s0x6000e6eadb04e641:0x9f11604d62fe08ea!8m2!3d34.7027397!4d135.5044554" target="_blank">Googe Mapで見る</a>
 									</div>
 								</div>
-								<div class="officeMap__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1063.44459708485!2d135.50366580884958!3d34.70236311891975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e5d07dc2ef50aed!2z44OZ44O844K544Kq44Oz44OI44OD44OXIOWkp-mYquaiheeUsOW6l--9nEJBU1MgT04gVE9Q!5e0!3m2!1sja!2sjp!4v1539230029097"
-								width="560" height="390" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+								<div class="officeMap__map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13120.386983218521!2d135.5044554!3d34.7027397!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9f11604d62fe08ea!2z5LiJ5YWx5qKF55Sw44OT44Or!5e0!3m2!1sja!2sjp!4v1541388634012"
+								 width="560" height="390" frameborder="0" style="border:0" allowfullscreen></iframe></iframe></div>
 							</section>
 						</div>
 					</section>
