--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -28,10 +28,10 @@
 	<main>
 		<!-- ***** about -->
 		<section id="about" class="section section--catetory section--about">
-			<header class="section__index js-effect">
+			<header class="section__index ">
 				<span class="mask"><span class="mask__element">ABOUT</span></span>
 			</header>
-			<div class="js-effect">
+			<div class="">
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
@@ -70,10 +70,10 @@
 				<section class="minds">
 					<div class="wrap">
 						<section class="mind mind--main ">
-							<h2 class="mind__index js-effect">
+							<h2 class="mind__index ">
 								自分にも、家族にも、誇れる会社を。
 							</h2>
-							<div class="mind__content js-effect">								
+							<div class="mind__content ">								
 								多様な働き方がある現代において、仕事は自己実現の手段にもなってきています。<br>
 								自分の仕事・働く会社について、友人や家族、そして我が子に胸を張って語れるだろうか？<br>
 								ひとりの専門家として、ひとりの社会人として、この世の中に貢献していく。<br>
@@ -81,26 +81,26 @@
 							</div>
 						</section>
 						<section class="mind mind--sub">
-							<header class="mind__index js-effect">
+							<header class="mind__index ">
 								VISION
 							</header>
-							<div class="mind__content js-effect">
+							<div class="mind__content ">
 								価値あるモノが継承される循環型の社会。
 							</div>
 						</section>
 						<section class="mind mind--sub">
-							<header class="mind__index js-effect">
+							<header class="mind__index ">
 								MISSION
 							</header>
-							<div class="mind__content js-effect">
+							<div class="mind__content ">
 								リユースをより身近に、イメージの一新を。
 							</div>
 						</section>
 						<section class="mind mind--sub">
-							<header class="mind__index js-effect">
+							<header class="mind__index ">
 								VALUE
 							</header>
-							<div class="mind__content js-effect">
+							<div class="mind__content ">
 								本物との出会いを、お客様の日常に。
 							</div>
 						</section>
@@ -112,10 +112,10 @@
 					<section class="message__main">
 						<div class="wrap">
 							<section class="message__text">
-								<header class="message__text__index js-effect">
+								<header class="message__text__index ">
 									<span class="mask"><span class="mask__element">MESSAGE</span></span>
 								</header>
-								<div class="message__text__content js-effect">
+								<div class="message__text__content ">
 									<p>
 										<span class="mask">
 											<span class="mask__element">
@@ -143,7 +143,7 @@
 									</p>
 								</div>
 							</section>
-							<div class="message__img js-effect">
+							<div class="message__img ">
 								<span class="mask"><span class="mask__element"><img src="<%- $path %>../img/about-message-img.jpg" alt=""></span></span>
 							</div>
 						</div>
@@ -354,10 +354,10 @@
 		<!-- ///// -->
 		<!-- ***** service -->
 		<section id="service" class="section section--catetory section--service">
-			<header class="section__index js-effect">
+			<header class="section__index ">
 				<span class="mask"><span class="mask__element">SERVICE</span></span>
 			</header>
-			<div class="js-effect mask">
+			<div class=" mask">
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
@@ -391,7 +391,7 @@
 				<!-- *** business -->
 				<section class="business">
 					<div class="inner">
-						<section class="business__main businessShowLayout js-effect">
+						<section class="business__main businessShowLayout ">
 							<div class="businessShowLayout__img">
 								<figure>
 									<img src="<%- $path %>../img/service-business-img.jpg" alt="">
@@ -411,7 +411,7 @@
 						</section>
 						<section>
 							<ul class="business__detail">
-								<li class="business__detail__thing js-effect">
+								<li class="business__detail__thing ">
 									<div class="business__detail__thing__text">
 										<h4 class="business__detail__thing__text__index">
 											「信頼の証」として、不正品排除を目的とした団体のAACD（日本流通自主管理協会）に加盟。
@@ -429,7 +429,7 @@
 										</figure>
 									</div>
 								</li>
-								<li class="business__detail__thing js-effect">
+								<li class="business__detail__thing ">
 									<div class="business__detail__thing__text">
 										<h4 class="business__detail__thing__text__index">
 											JAPAN TAX FREE SHOP
@@ -449,7 +449,7 @@
 										</figure>
 									</div>
 								</li>
-								<li class="business__detail__thing js-effect">
+								<li class="business__detail__thing ">
 									<div class="business__detail__thing__text">
 										<h4 class="business__detail__thing__text__index">
 											おたからや 6 銀座店
@@ -550,7 +550,7 @@
 						<!-- //// -->
 						<!-- *** 海外向け -->
 						<section class="business__oversea">
-							<section class="business__main businessShowLayout js-effect">
+							<section class="business__main businessShowLayout ">
 								<div class="businessShowLayout__img">
 									<figure>
 										<img src="<%- $path %>../img/service-foreign-img.jpg" alt="">
@@ -573,7 +573,7 @@
 							</section>
 							<section>
 								<ul class="business__detail">
-									<li class="business__detail__thing js-effect">
+									<li class="business__detail__thing ">
 										<div class="business__detail__thing__text">
 											<h4 class="business__detail__thing__text__index">
 												ネットEコマースのルイ・ヴィトンの中古品に特化したリユース新専門店「LooV」
@@ -604,10 +604,10 @@
 		<!-- ///// -->
 		<!-- ***** company -->
 		<section id="company" class="section section--catetory section--company">
-			<header class="section__index js-effect">
+			<header class="section__index ">
 				<span class="mask"><span class="mask__element">COMPANY</span></span>
 			</header>
-			<div class="js-effect">
+			<div class="">
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
