--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -31,7 +31,7 @@
 			<header class="section__index ">
 				<span class="mask"><span class="mask__element">ABOUT</span></span>
 			</header>
-			<div class="">
+			<div>
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
@@ -154,7 +154,7 @@
 							<h3 class="chart__index">
 								<span>売り上げの過去遷移</span>
 							</h3>
-							<figure class="">
+							<figure>
 								<img src="<%- $path %>../img/about-sell-chart.png" alt="">
 							</figure>
 						</div>
@@ -557,7 +557,7 @@
 									</figure>
 								</div>
 								<div class="businessShowLayout__text">
-									<div class="">
+									<div>
 										<h2 class="businessShowLayout__index">
 											海外向けネット事業
 										</h2>
@@ -607,7 +607,7 @@
 			<header class="section__index ">
 				<span class="mask"><span class="mask__element">COMPANY</span></span>
 			</header>
-			<div class="">
+			<div>
 				<section class="section__mv">
 					<div class="mask">
 						<figure class="section__mv__img mask__element">
