--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -955,34 +955,34 @@
 						<div class="recruitInfo__details">
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									<span>総合職(営業・販売・仕入)</span>
+									<span>新卒募集要項</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
-									<%- include('_include/recruit-sogoshoku.ejs') %>
+									<%- include('_include/recruit-new.ejs') %>
 								</div>
 							</section>
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									<span>総合職(営業・販売・仕入)</span>
+									<span>中途募集要項</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quisquam, vel sed quasi, veritatis nemo esse fugiat natus deserunt quam nobis consequatur ea voluptatem itaque suscipit in laborum dicta rem.
+									<%- include('_include/recruit-career.ejs') %>
 								</div>
 							</section>
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									<span>総合職(営業・販売・仕入)</span>
+									<span>アルバイト(東京エリア)</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
-									kari
+									<%- include('_include/recruit-b-kanto.ejs') %>
 								</div>
 							</section>
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									<span>総合職(営業・販売・仕入)</span>
+									<span>アルバイト(関西エリア)</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
-									kari
+									<%- include('_include/recruit-b-osaka.ejs') %>
 								</div>
 							</section>
 							<div class="button"><a href="#contact">エントリー</a></div>
