下層　文字サイズ

--- a/dev/src/scss/_style-privacy.scss
+++ b/dev/src/scss/_style-privacy.scss
@@ -30,7 +30,7 @@
     &__index{
         margin-bottom: 50px;
         position: relative;
-        font-size: $fontsize_l;
+        font-size: $fontsize_m;
         font-weight: bold;
         letter-spacing: 0.08em;
         line-height: 1;
