--- a/dev/src/scss/_modules.scss
+++ b/dev/src/scss/_modules.scss
@@ -11,7 +11,11 @@ body{
 	position: relative;
 
 	&:not( .top ){
-		padding-top: 15vh;
+		padding-top: 20vh;
+
+		@include mq( tab ){
+			padding-top: 15vh;
+		}
 	}
 }
 
