--- a/dev/src/scss/_style-agreement.scss
+++ b/dev/src/scss/_style-agreement.scss
@@ -28,9 +28,9 @@
     }
 
     &__index{
-        margin-bottom: 50px;
+        margin-bottom: 30px;
         position: relative;
-        font-size: $fontsize_l;
+        font-size: $fontsize_m;
         font-weight: bold;
         letter-spacing: 0.08em;
         line-height: 1;
