--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -627,21 +627,33 @@
 							<table class="companyInfo">
 								<tr>
 									<th>
-										社名
+										会社名
 									</th>
 									<td>株式会社水野</td>
 								</tr>
 								<tr>
 									<th>
-										設立年月日
+										会社名（フリガナ）
 									</th>
-									<td>2009年7月27日</td>
+									<td>カブシキガイシャ ミヅノ</td>
 								</tr>
 								<tr>
 									<th>
 										代表取締役
 									</th>
 									<td>水野 政行</td>
+								</tr>
+								<tr>
+									<th>
+										創業
+									</th>
+									<td>2008年9月1日</td>
+								</tr>
+								<tr>
+									<th>
+										設立
+									</th>
+									<td>2009年7月27日</td>
 								</tr>
 								<tr>
 									<th>
@@ -664,27 +676,41 @@
 								</tr>
 								<tr>
 									<th>
-										従業員数
-									</th>
-									<td>15名(内パート・アルバイト4名)</td>
-								</tr>
-								<tr>
-									<th>
 										事業内容
 									</th>
 									<td>
-										■ブランド品、コレクション商品の買取・販売<br>
-										■ハイブランドショップ「みづの屋」の運営<br>
-										■買取専門店「おたからや梅田店」「おたからや心斎橋店」「おたからや上野御徒町店」の運営<br>
-										■買取・販売店「おたからや 6 銀座店」の運営<br>
-										■ＥＣショップ「楽天」「Amazon」「Yahoo！」海外サイト「eBay」「楽天グローバル」「REEBONZ」「淘宝」への出店
+										■リユース品全般の買取および販売<br>
+										■買取専門店おたからやのＦＣ加盟店を4店舗運営※2018年11月現在<br>
+										　東京地区：6銀座店、上野御徒町店<br>
+										　関西地区：梅田店、心斎橋店<br>
+										■ハイブランド品のネット販売（ルイ・ヴィトン、シャネル、エルメスなど）<br>
 									</td>
 								</tr>
 								<tr>
 									<th>
-										加盟団体
+										事業所
 									</th>
-									<td>AACD（日本流通自主管理会）会員番号 / R-0100 </td>
+									<td>
+									<a href="#shop-ginza">おたからや6銀座店</a>、<a href="#shop-ueno">おたからや上野御徒町店</a>、<a href="#shop-umeda">おたからや梅田店</a>、<a href="#shop-shinsaibashi">おたからや心斎橋店</a>
+									</td>
+								</tr>
+								<tr>
+									<th>
+										従業員数
+									</th>
+									<td>22名(内パート・アルバイト含む) <br>※2018年11月現在</td>
+								</tr>
+								<tr>
+									<th>
+										加盟団体及び許認可番号
+									</th>
+									<td>
+										AACD（日本流通自主管理会）会員番号 / R-0100 <br>
+										古物商許可番号：東京都公安委員会 第306601706935号 <br>
+										大阪府公安委員会　第621012100382号 <br>
+										特別国際種事業者番号：S-3-13-31346 <br>
+										酒販免許：北税務署 北法第299号
+									</td>
 								</tr>
 								<tr>
 									<th>
@@ -699,7 +725,7 @@
 								</tr>
 								<tr>
 									<th>
-										取引先銀行
+										取引銀行
 									</th>
 									<td>
 										三井住友銀行<br>
@@ -717,33 +743,23 @@
 										日本マテリアル株式会社<br>
 										株式会社ネットジャパン<br>
 										株式会社中央宝石研究所<br>
-										株式会社GIA JAPAN（ギア ジャパン）<br>
+										株式会社GIA JAPAN<br>
 										株式会社KOMEHYOオークション<br>
 										他
-									</td>
-								</tr>
-								<tr>
-									<th>
-										古物営業法に基づく表示									
-									</th>
-									<td>
-										古物商（販売業務・買取業務）<br>
-										株式会社水野　代表者：水野政行<br>
-										大阪府公安委員会許可 第62101210038	
 									</td>
 								</tr>
 							</table>
 							<section class="officeMap">
 								<div class="officeMap__text">
 									<h3 class="officeMap__index">
-										TOKYO HEAD OFFICE
+										東京本社
 									</h3>
 									<div>
 										〒104-0061 <br>
 										東京都中央区銀座６丁目４-８ 曽根ビル１階 <br>
 										フリーダイヤル：0120-800-110 <br>
-										TEL：03-6274-6688　FAX：03-6274-6686 <br>
-										MAIL：six-ginzaten@otakaraya.jp <br>
+										TEL：03-6263-8768　FAX：03-6263-8768 <br>
+										MAIL：info@miduno.co.jp <br>
 										アクセス：地下鉄 銀座駅 C2出口から徒歩 約3分／ＪＲ線 有楽町駅 銀座口から徒歩約4分／ＪＲ線 新橋駅から徒歩 約７分
 									</div>
 									<div class="officeMap__text__link">
@@ -756,13 +772,13 @@
 							<section class="officeMap">
 								<div class="officeMap__text">
 									<h3 class="officeMap__index">
-										OSAKA HEAD OFFICE
+										本社
 									</h3>
 									<div>
 										〒530-0027　大阪府大阪市北区堂山町1-5<br>
 										三共梅田ビル３階<br>
-										フリーダイヤル：0120-688-802<br>
-										MAIL：umedaten@otakaraya.jp<br>
+										TEL：06-6232-8066　FAX：06-6232-8099<br>
+										MAIL：info@miduno.co.jp<br>
 										アクセス：泉の広場Ｍ10出口 徒歩３分／阪急線 梅田駅 徒歩８分／地下鉄御堂筋線 梅田駅 徒歩８分／地下鉄谷町線 東梅田駅 徒歩５分／JR大阪駅 御堂筋口 徒歩１０分
 									</div>
 									<div class="officeMap__text__link">
@@ -786,7 +802,7 @@
 								</h4>
 								<div class="area__content">
 									<ul class="areas">
-										<li class="area__detail">
+										<li class="area__detail" id="shop-ginza">
 											<figure class="area__detail__img">
 												<img src="<%- $path %>../img/company-shoplist-kanto-ginza.jpg" width="290" alt="">
 											</figure>
@@ -795,7 +811,6 @@
 											</h5>
 											<div class="area__detail__content">
 												<p>
-													銀座６丁目　路面店<br>
 													〒104-0061 東京都中央区銀座６丁目４-８ 曽根ビル１階 <br>
 													フリーダイヤル：0120-800-110 <br>
 													TEL：03-6274-6688　FAX：03-6274-6686 <br>
@@ -819,7 +834,7 @@
 												</p>
 											</div>
 										</li>
-										<li class="area__detail">
+										<li class="area__detail" id="shop-ueno">
 											<figure class="area__detail__img">
 												<img src="<%- $path %>../img/company-shoplist-kanto-ueno.jpg" width="290" alt="">
 											</figure>
@@ -829,7 +844,6 @@
 											</h5>
 											<div class="area__detail__content">
 												<p>
-													日本最大級の宝石の街 <br>
 													〒110-0005 東京都台東区上野5-26-5 日清ビル5階 <br>
 													フリーダイヤル：0120-624-777 <br>
 													TEL：03-6803-0777　FAX：03-6803-0887 <br>
@@ -862,7 +876,7 @@
 								</h4>
 								<div class="area__content">
 									<ul class="areas">
-										<li class="area__detail">
+										<li class="area__detail" class="shop-umeda">
 											<figure class="area__detail__img">
 												<img src="<%- $path %>../img/company-shoplist-kanto-umeda.jpg" width="290" alt="">
 											</figure>
@@ -871,7 +885,6 @@
 											</h5>
 											<div class="area__detail__content">
 												<p>
-													 2017年研修参加特別優良店 <br>
 													〒530-0027　大阪府大阪市北区堂山町1-5 <br>
 													三共梅田ビル３階 <br>
 													フリーダイヤル：0120-688-802 <br>
@@ -895,7 +908,7 @@
 												</p>
 											</div>
 										</li>
-										<li class="area__detail">
+										<li class="area__detail" class="shop-shinsaibashi">
 											<figure class="area__detail__img">
 												<img src="<%- $path %>../img/company-shoplist-kanto-shinsaibashi.jpg" width="290" alt="">
 											</figure>
@@ -904,7 +917,6 @@
 											</h5>
 											<div class="area__detail__content">
 												<p>
-													2017年研修参加優良店 <br>
 													〒542-0083　大阪府大阪市中央区東心斎橋1-10-12　伊藤ビル1F <br>
 													フリーダイヤル：0120-770-456 <br>
 													MAIL：shinsaibashiten@otakaraya.jp
