--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -645,6 +645,15 @@
 								</tr>
 								<tr>
 									<th>
+										所在地
+									</th>
+									<td>
+										本社：〒530-0027　大阪府大阪市北区堂山町1-5 三共梅田ビル３階<br>
+										東京本社：〒104-0061　東京都中央区銀座６丁目４-８ 曽根ビル１階
+									</td>
+								</tr>
+								<tr>
+									<th>
 										創業
 									</th>
 									<td>2008年9月1日</td>
@@ -681,7 +690,7 @@
 									<td>
 										■リユース品全般の買取および販売<br>
 										■買取専門店おたからやのＦＣ加盟店を4店舗運営※2018年11月現在<br>
-										　東京地区：6銀座店、上野御徒町店<br>
+										　東京地区：おたからや 6　銀座店、上野 御徒町店<br>
 										　関西地区：梅田店、心斎橋店<br>
 										■ハイブランド品のネット販売（ルイ・ヴィトン、シャネル、エルメスなど）<br>
 									</td>
@@ -691,7 +700,7 @@
 										事業所
 									</th>
 									<td>
-									<a href="#shop-ginza">おたからや6銀座店</a>、<a href="#shop-ueno">おたからや上野御徒町店</a>、<a href="#shop-umeda">おたからや梅田店</a>、<a href="#shop-shinsaibashi">おたからや心斎橋店</a>
+									<a href="#shop-ginza">おたからや 6 銀座店</a>、<a href="#shop-ueno">おたからや 上野御徒町店</a>、<a href="#shop-umeda">おたからや 梅田店</a>、<a href="#shop-shinsaibashi">おたからや 心斎橋店</a>
 									</td>
 								</tr>
 								<tr>
@@ -757,8 +766,8 @@
 									<div>
 										〒104-0061 <br>
 										東京都中央区銀座６丁目４-８ 曽根ビル１階 <br>
-										フリーダイヤル：0120-800-110 <br>
-										TEL：03-6263-8768　FAX：03-6263-8768 <br>
+										TEL：03-6263-8768 <br>
+										FAX：03-6263-8768 <br>
 										MAIL：info@miduno.co.jp <br>
 										アクセス：地下鉄 銀座駅 C2出口から徒歩 約3分／ＪＲ線 有楽町駅 銀座口から徒歩約4分／ＪＲ線 新橋駅から徒歩 約７分
 									</div>
@@ -777,7 +786,8 @@
 									<div>
 										〒530-0027　大阪府大阪市北区堂山町1-5<br>
 										三共梅田ビル３階<br>
-										TEL：06-6232-8066　FAX：06-6232-8099<br>
+										TEL：06-6232-8066　<br>
+										FAX：06-6232-8099<br>
 										MAIL：info@miduno.co.jp<br>
 										アクセス：泉の広場Ｍ10出口 徒歩３分／阪急線 梅田駅 徒歩８分／地下鉄御堂筋線 梅田駅 徒歩８分／地下鉄谷町線 東梅田駅 徒歩５分／JR大阪駅 御堂筋口 徒歩１０分
 									</div>
@@ -876,7 +886,7 @@
 								</h4>
 								<div class="area__content">
 									<ul class="areas">
-										<li class="area__detail" class="shop-umeda">
+										<li class="area__detail" id="shop-umeda">
 											<figure class="area__detail__img">
 												<img src="<%- $path %>../img/company-shoplist-kanto-umeda.jpg" width="290" alt="">
 											</figure>
@@ -908,7 +918,7 @@
 												</p>
 											</div>
 										</li>
-										<li class="area__detail" class="shop-shinsaibashi">
+										<li class="area__detail" id="shop-shinsaibashi">
 											<figure class="area__detail__img">
 												<img src="<%- $path %>../img/company-shoplist-kanto-shinsaibashi.jpg" width="290" alt="">
 											</figure>
