--- a/dev/src/ejs/_include/_function.ejs
+++ b/dev/src/ejs/_include/_function.ejs
@@ -3,20 +3,20 @@
    $scripts_global=new Array();
 
    $meta = {
-      title: 'MIDUNO',
-      description: '',
-      keywords: '',
+      title: '株式会社MUDUNO',
+      description: 'MIDUNOのコーポレートサイトです。「価値あるリユースで、経済の循環を。」をコーポレートビジョンに、ブランド品の買取・販売、おたからやの運営など、リユース事業を展開する企業です。',
+      keywords: 'おたからや,MIDUNO,買取,リユース,銀座,GINZA',
       og:{
-         title: '',
-         sitename: '',
-         description: '',
+         title: '株式会社MUDUNO',
+         sitename: '株式会社MUDUNO',
+         description: 'MIDUNOのコーポレートサイトです。「価値あるリユースで、経済の循環を。」をコーポレートビジョンに、ブランド品の買取・販売、おたからやの運営など、リユース事業を展開する企業です。',
          type: 'website',
-         image: 'https://ao-sta.com/assets/img/ogp.jpg',
-         url: ''
+         image: 'https://miduno.co.jp/assets/img/ogp.jpg',
+         url: 'https://miduno.co.jp/'
       },
       twitter:{
-         title: '',
-         description: '',
+         title: '株式会社MUDUNO',
+         description: 'MIDUNOのコーポレートサイトです。「価値あるリユースで、経済の循環を。」をコーポレートビジョンに、ブランド品の買取・販売、おたからやの運営など、リユース事業を展開する企業です。',
       }
    }
 
