--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -474,6 +474,32 @@
 							</ul>
 						</section>
 						<div class="business__movie">
+							<style>
+								.business__movie{
+									line-height: 0;
+									overflow: hidden;
+									position: relative;
+								}
+								.business__movie__comingsoon{
+									width: 100%;
+									height: 100%;
+									display: flex;
+									align-items: center;
+									justify-content: center;
+									position: absolute;
+									top: 0;
+									right: 0;
+									bottom: 0;
+									left: 0;
+									z-index: 5;
+									font-weight: bold;
+									font-family: Roboto, serif;
+									background-color: rgba( 255,255,255, 0.8 );
+								}
+							</style>
+							<div class="business__movie__comingsoon">
+								COMING SOON
+							</div>
 							<div class="business__movie__play">
 								<a href=""></a>
 							</div>
