--- a/dev/src/ejs/thanks.ejs
+++ b/dev/src/ejs/thanks.ejs
@@ -14,7 +14,7 @@
     </script>
     <main>
 		<!-- *****  -->
-		<section class="section section--catetory section--thankyou">
+		<section class="section section--catetory section--thankyou section--textOnly">
 			<header class="section__index js-effect">
 				<span class="mask"><span class="mask__element">THANK YOU.</span></span>
 			</header>
